# Wheel

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Google_tests/: CMakeLists.txt  ECS.cpp  Events.cpp
assets/shaders/: base.frag  base.vert
dependencies/glad/: glad.c  glad.h
game/: Start.cpp  Start.h  main.cpp
src/core/: ComponentPool.h  Description.h  Globals.h  Scene.h  System.h  SystemManager.h
src/systems/: Rendering.cpp  Rendering.h
wheel/EventSystem/: EventBus.h  Events.h  InputEvents.h  RenderEvents.h  SubscriptionToken.h
wheel/include/components/: CameraComponent.h  Render2DComponent.h  TextureComponent.h  Transform2D.h
wheel/include/core/: ComponentManager.h  ComponentPool.h  Description.h  EntityManager.h  Globals.h  Scene.h  System.h  SystemManager.h  Transform.h
wheel/include/math/: Matrix4x4.h  Vector2.h  Vector3.h  Vector4.h
wheel/include/systems/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h
wheel/renderer/include/: RenderedObject.h  Renderer.h  Shader.h  Texture.h
wheel/renderer/src/: Renderer.cpp  Shader.cpp  Texture.cpp
